2015-07-16  Charlie Zender  <zender@uci.edu>

	* NCO 4.5.2-alpha3 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.5.2-alpha3 final changes';git push
	git tag -a 4.5.2-alpha3 -m 'Version 4.5.2-alpha3 tag: --glb_att_add';git push --tags

	* Implement glb_att_add (gaa) in all remaining operators

	* Document --glb_att_add

2015-07-15  Charlie Zender  <zender@uci.edu>

	* Change --glb_mtd_spp to --no_glb_mtd so --glb can refer to --gaa

	* Implement glb_att_add (gaa) in ncra

	* Eliminate small leak in kvm loop in nco_glb_att_add(), nco_rgr_ini()

2015-07-14  Charlie Zender  <zender@uci.edu>

	* Implement glb_att_add (gaa) in ncks

2015-07-13  Charlie Zender  <zender@uci.edu>

	* NCO 4.5.2-alpha2 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.5.2-alpha2 final changes';git push
	git tag -a 4.5.2-alpha2 -m 'Version 4.5.2-alpha2 tag: Displaced-pole support, fracarea/destarea';git push --tags

	* Completed (though did not verify) first regridding to/from POP displaced-pole grid with SCRIP mapfile

	* Valgrind emits "uninitialized value" warnings at first cosine cos() function in nco_lat_wgt_gss()---why?

	* Implement true "destarea" normalization, support more aspects of dst_frac and dst_mask

	* Ensure double normalization (with --rnr and "none" = imask) does not occur

	* Convert input coordinates from radians to degrees if necessary, handle POP grids

	* Allow SCRIP "fracarea" normalization which is, in my terminology, no normalization just weights
	"fracarea" is what NCO actually did before, although technically all ESMF fields tested were "destarea"
	But their dst_frac = frac_b was uniformly 1.0, so no difference	from "destarea"

2015-07-12  Charlie Zender  <zender@uci.edu>

	* Add sanity checks to ensure mapfile grid matches input data file grid

2015-07-11  Charlie Zender  <zender@uci.edu>

	* NCO 4.5.2-alpha1 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.5.2-alpha1 final changes';git push